--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
