--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
     - 'db/cache_schema.rb'
     - 'db/queue_schema.rb'
     - 'db/schema.rb'
+    - 'vendor/bundle/**/*'
 
 Style/Documentation:
   Enabled: false
