--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+/vendor/bundle/**/*
+
 # Terraform
 .terraform/
 *.tfstate
