--- a/.github/workflows/rubocop_challenge.yml
+++ b/.github/workflows/rubocop_challenge.yml
@@ -3,7 +3,7 @@ name: "RuboCop Challenge"
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 0 * * *
+    - cron: 0 0 * * 5
 
 jobs:
   create-rubocop-challenger-pr:
