Fix only safely correctable cops

--- a/.github/workflows/rubocop_challenge.yml
+++ b/.github/workflows/rubocop_challenge.yml
@@ -26,4 +26,5 @@ jobs:
             --email="rubocop-challenger@example.com" \
             --name="Rubocop Challenger" \
             --base-branch=main --mode=least_occurrence \
+            --only-safe-autocorrect \
             --no-auto-gen-timestamp --only-exclude --exclude-limit=999999
