--- a/.github/workflows/rubocop_challenge.yml
+++ b/.github/workflows/rubocop_challenge.yml
@@ -19,7 +19,7 @@ jobs:
         run: git config remote.origin.url "git@github.com:${{ github.repository }}.git"
       - name: Create RuboCop challenge pull request
         env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACCESS_TOKEN: ${{ secrets.PAT }}
         run: |
           gem install rubocop_challenger
           rubocop_challenger go \
