:police_car: regenerate rubocop todo

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -141,6 +141,12 @@ Style/IfUnlessModifier:
   Exclude:
     - 'bin/bundle'
 
+# Offense count: 1
+# This cop supports unsafe autocorrection (--autocorrect-all).
+# Configuration parameters: RequireEnglish.
+# SupportedStyles: use_perl_names, use_english_names, use_builtin_english_names
+Style/SpecialGlobalVars:
+  EnforcedStyle: use_perl_names
 
 # Offense count: 1
 # This cop supports safe autocorrection (--autocorrect).
