--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -105,6 +105,12 @@ Style/FrozenStringLiteralComment:
     - 'test/application_system_test_case.rb'
     - 'test/test_helper.rb'
 
+# Offense count: 2
+# This cop supports unsafe autocorrection (--autocorrect-all).
+Style/GlobalStdStream:
+  Exclude:
+    - 'bin/setup'
+    - 'config/environments/production.rb'
 
 # Offense count: 3
 # This cop supports safe autocorrection (--autocorrect).
