--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -12,6 +12,14 @@ Layout/EmptyLineAfterGuardClause:
   Exclude:
     - 'bin/bundle'
 
+# Offense count: 3
+# This cop supports safe autocorrection (--autocorrect).
+# Configuration parameters: Max, AllowHeredoc, AllowURI, AllowQualifiedName, URISchemes, IgnoreCopDirectives, AllowedPatterns, SplitStrings.
+# URISchemes: http, https
+Layout/LineLength:
+  Exclude:
+    - 'bin/bundle'
+    - 'config/initializers/devise.rb'
 
 # Offense count: 12
 # This cop supports safe autocorrection (--autocorrect).
